--- a/tools/my_new_arch_setup/README
+++ b/tools/my_new_arch_setup/README
@@ -1,1 +1,1 @@
-this is personal setup to downloads my need packages and set up somethings for new arch linux installation !
+this is personal setup to download my need packages and setup somethings for new arch linux installation !
